fix: Remove overflow:hidden from .nav-item to allow dropdown visibility

--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -53,7 +53,6 @@ nav {
   flex: 1;
   line-height: 50px;
   height: 50px;
-  overflow: hidden;
   flex-wrap: wrap;
   align-items: center;
 
